Fix x-axis overflow due to hex image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,7 @@ body {
   color: var(--font-color);
   font-family: var(--font);
   font-style: normal;
+  overflow-x: hidden;
 }
 
 nav {
